--- a/archives.html
+++ b/archives.html
@@ -44,22 +44,22 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox.png" alt="inbox">
+                    <img src="./img/inbox.svg" alt="inbox">
                     <span style="color: #858796;" id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="archives.html">
-                    <img src="./img/archive-active.png" alt="archive-active">
+                    <img src="./img/archive-active.svg" alt="archive-active">
                     <span id="sidebarlink">Archives</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="meetings.html">
-                    <img src="./img/video.png" alt="video">
+                    <img src="./img/video.svg" alt="video">
                     <span style="color: #858796;" id="sidebarlink">Meetings</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings.png" alt="settings">
+                    <img src="./img/settings.svg" alt="settings">
                     <span style="color: #858796;" id="sidebarlink">Settings</span></a>
             </li>
 
@@ -199,7 +199,7 @@
 
                                             <td role="cell">
                                                 <button>
-                                                    <img style="margin-top: -5px; vertical-align: middle;" src="./img/chat-history-icon.svg">
+                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
                                                     History</button>
                                             </td>
 
@@ -214,7 +214,7 @@
 
                                             <td role="cell">
                                                 <button>
-                                                    <img style="margin-top: -5px; vertical-align: middle;" src="./img/chat-history-icon.svg">
+                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
                                                     History</button>
                                             </td>
 
@@ -229,7 +229,7 @@
 
                                             <td role="cell">
                                                 <button>
-                                                    <img style="margin-top: -5px; vertical-align: middle;" src="./img/chat-history-icon.svg">
+                                                    <img style="margin-top: -2px; vertical-align: middle;" src="./img/chat-history-icon.svg">
                                                     History</button>
                                             </td>
 
