--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
 
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox-active.png" alt="inbox-active">
+                    <img src="./img/inbox-active.svg" alt="inbox-active">
                     <span id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="archives.html">
-                    <img src="./img/archive.png" alt="archive">
+                    <img src="./img/archive.svg" alt="archive">
                     <span style="color: #858796;" id="sidebarlink">Archives</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="meetings.html">
-                    <img src="./img/video.png" alt="video">
+                    <img src="./img/video.svg" alt="video">
                     <span style="color: #858796;" id="sidebarlink">Meetings</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings.png" alt="settings">
+                    <img src="./img/settings.svg" alt="settings">
                     <span style="color: #858796;" id="sidebarlink">Settings</span></a>
             </li>
 
@@ -264,7 +264,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 py-2 px-0" style="height: calc(100vh - 4.375rem);">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 py-2 px-0" style="height: calc(100vh - 3.375rem);">
                             <h4 class="live-chat-mobile-display">
                                 <div class="live-chat-customer-name">
                                     <div class="live-chat-mobile-display back-arrow">
@@ -370,35 +370,45 @@
                                             <div class="live-chat-text-format-icon-wrapper text-format" onclick="display_text_format_icons()">
                                                 <img src="./img/text-format.svg" alt="Private note icon" class="live-chat-text-format-icon">
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper bold">
+                                            <div class="live-chat-text-format-icon-wrapper bold tooltip-textarea">
                                                 <img src="./img/bold.svg" alt="Bold" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Bold</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper italics">
+                                            <div class="live-chat-text-format-icon-wrapper italics tooltip-textarea">
                                                 <img src="./img/italics.svg" alt="Italics" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Italics</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper strikethrough">
+                                            <div class="live-chat-text-format-icon-wrapper strikethrough tooltip-textarea">
                                                 <img src="./img/s.svg" alt="S" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Strikethrough</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper code">
+                                            <div class="live-chat-text-format-icon-wrapper code tooltip-textarea">
                                                 <img src="./img/code.svg" alt="Code" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Code</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper ordered-list">
+                                            <div class="live-chat-text-format-icon-wrapper ordered-list tooltip-textarea">
                                                 <img src="./img/list-numbering.svg" alt="List numbering" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Ordered List</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper unordered-list">
+                                            <div class="live-chat-text-format-icon-wrapper unordered-list tooltip-textarea">
                                                 <img src="./img/list-bullets.svg" alt="List bullets" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Unordered List</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper attachment">
+                                            <div class="live-chat-text-format-icon-wrapper attachment tooltip-textarea">
                                                 <img src="./img/attachment.svg" alt="Attachment" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Attach File</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper emoji">
+                                            <div class="live-chat-text-format-icon-wrapper emoji tooltip-textarea">
                                                 <img src="./img/emoji.svg" alt="Emoji" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Emoji</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper mic">
+                                            <div class="live-chat-text-format-icon-wrapper mic tooltip-textarea">
                                                 <img src="./img/mic.svg" alt="Mic" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Microphone</span>
                                             </div>
-                                            <div class="live-chat-text-format-icon-wrapper send">
+                                            <div class="live-chat-text-format-icon-wrapper send tooltip-textarea">
                                                 <img src="./img/send.svg" alt="Send" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Send</span>
                                             </div>
                                         </div>
                                     </div>
