navbar and UI update

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Live Chat - Inbox</title>
 
-    <link rel="shortcut icon" href="./img/logo.png" type="image/png">
+    <link rel="shortcut icon" href="./img/logo.svg" type="image/png">
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -120,9 +120,11 @@
             <!-- Sidebar - Brand -->
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
                 <div class="sidebar-brand-icon">
-                    <img src="./img/logo.png" alt="logo">
+                    <img src="./img/logo.svg" alt="logo" width="36" height="36" id="oncollapse">
                 </div>
-                <div class="sidebar-brand-text mx-3" style="text-transform: none; color: black;">LiveChat</div>
+                <div class="sidebar-brand-text mx-3">
+                    <img src="./img/logo-collapse.svg" alt="logo" width="120" height="36" id="without-collapse">
+                </div>
             </a>
 
 
@@ -165,7 +167,7 @@
             <br>
             <!-- Sidebar Toggler (Sidebar) -->
             <div class="text-center d-none d-md-inline">
-                <button class="rounded-circle border-0" id="sidebarToggle"></button>
+                <button class="rounded-circle border-0" id="sidebarToggle" onclick="myLogoCollapse()"></button>
             </div>
 
         </ul>
@@ -392,7 +394,7 @@
                                             </div>
                                             <div class="live-chat-text-format-icon-wrapper unordered-list tooltip-textarea">
                                                 <img src="./img/list-bullets.svg" alt="List bullets" class="live-chat-text-format-icon">
-                                                <span class="tooltiptext">Unordered List</span>
+                                                <span class="tooltiptext" style="width: 85px;">Unordered List</span>
                                             </div>
                                             <div class="live-chat-text-format-icon-wrapper attachment tooltip-textarea">
                                                 <img src="./img/attachment.svg" alt="Attachment" class="live-chat-text-format-icon">
@@ -505,6 +507,8 @@
     <script src="js/sb-admin-2.min.js"></script>
 
     <script src="js/script.js"></script>
+    <script>
+    </script>
 
 
 </body>
