fint family and admin chat histry

--- a/archives.html
+++ b/archives.html
@@ -17,7 +17,7 @@
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet"> -->
     <!-- Custom styles for this template-->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.css" rel="stylesheet" />
@@ -39,7 +39,7 @@
                     <img src="./img/logo.svg" alt="logo" width="36" height="36" id="oncollapse">
                 </div>
                 <div class="sidebar-brand-text mx-3">
-                    <img src="./img/logo-collapse.svg" style="margin-left: 0px;" alt="logo" width="120" height="36" id="without-collapse">
+                    <img src="./img/logo-collapse.svg" style="margin-left: -34px;" alt="logo" width="120" height="36" id="without-collapse">
                 </div>
             </a>
 
