--- a/meetings.html
+++ b/meetings.html
@@ -44,7 +44,7 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox.svg" alt="inbox">
+                    <img src="./img/inbox.svg" alt="inbox" style="border-radius: 8px 8px 0px 0px;">
                     <span style="color: #858796;" id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item">
@@ -59,7 +59,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings.svg" alt="settings">
+                    <img src="./img/settings.svg" alt="settings" style="border-radius: 20px;">
                     <span style="color: #858796;" id="sidebarlink">Settings</span></a>
             </li>
 
