--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
             <li class="nav-item active">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox-active.svg" alt="inbox-active">
+                    <img src="./img/inbox-active.svg" alt="inbox-active" style="border-radius: 8px 8px 0px 0px;">
                     <span id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item">
@@ -147,7 +147,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings.svg" alt="settings">
+                    <img src="./img/settings.svg" alt="settings" style="border-radius: 20px;">
                     <span style="color: #858796;" id="sidebarlink">Settings</span></a>
             </li>
 
@@ -387,8 +387,8 @@
                                                 <span class="tooltiptext">Strikethrough</span>
                                             </div>
                                             <div class="live-chat-text-format-icon-wrapper code tooltip-textarea">
-                                                <img src="./img/code.svg" alt="Code" class="live-chat-text-format-icon">
-                                                <span class="tooltiptext">Code</span>
+                                                <img src="./img/link.svg" alt="Code" class="live-chat-text-format-icon">
+                                                <span class="tooltiptext">Link</span>
                                             </div>
                                             <div class="live-chat-text-format-icon-wrapper ordered-list tooltip-textarea">
                                                 <img src="./img/list-numbering.svg" alt="List numbering" class="live-chat-text-format-icon">
