--- a/settings.html
+++ b/settings.html
@@ -89,7 +89,7 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox.svg" alt="inbox">
+                    <img src="./img/inbox.svg" alt="inbox" style="border-radius: 8px 8px 0px 0px;">
                     <span style="color: #858796;" id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item">
@@ -104,7 +104,7 @@
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings-active.svg" alt="settings-active">
+                    <img src="./img/settings-active.svg" alt="settings-active" style="border-radius: 20px;">
                     <span id="sidebarlink">Settings</span></a>
             </li>
 
@@ -385,6 +385,7 @@
                                                 <option value="1995">1995</option>
                                               
                                            </select>
+                                        <button class="filter-apply-button">Apply</button>
 
 
 
