--- a/manage-users.html
+++ b/manage-users.html
@@ -203,12 +203,12 @@
 
             <li class="nav-item">
                 <a class="nav-link " href="chat-history.html">
-                    <img src="./img/admin-chat-history.svg" alt="chat-history-active">
+                    <img src="./img/admin-chat-history.svg" alt="chat-history-active" style="border-radius: 8px;">
                     <span style="color: #858796;" id="sidebarlink">Chat History</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="manage-users.html">
-                    <img src="./img/manage-users-active.svg" alt="manage-users">
+            <li class="nav-item active">
+                <a class="nav-link " href="manage-users.html">
+                    <img src="./img/manage-users-active.svg" alt="manage-users" style="border-radius: 8px 8px 0px 0px;">
                     <span id="sidebarlink">Managa Users</span></a>
             </li>
             <li class="nav-item">
@@ -218,7 +218,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="meetings.html">
-                    <img src="./img/bar-graph.svg" alt="graph">
+                    <img src="./img/bar-graph.svg" alt="graph" style="border-radius: 3px 8px 3px 3px;">
                     <span style="color: #858796;" id="sidebarlink">Graph</span></a>
             </li>
             <li class="nav-item">
