--- a/inbox-empty-chat.html
+++ b/inbox-empty-chat.html
@@ -30,76 +30,38 @@
     <!-- Page Wrapper -->
     <div id="wrapper">
 
-        <!-- Transfer Chat Popup Model -->
-        <div class="transfer-chat-model" id="myModel">
+        <!-- Agent Offline Reason Popup Model -->
+        <div class="agent-offline-status-model" id="offlineReasonModal">
 
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
                 <form action="#" class="form-container">
                     <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 transfer-chat-popup-heading">
-                            <h6>Transfer Chat</h6>
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 agent-offline-status-popup-heading">
+                            <h6>Set Offline</h6>
 
 
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-12">
-                            <label>Transfer chat to</label>
+                            <label>Please provide a suitable reason</label>
                             <select>
-                              <option>Select from drop down</option>
-                              <option>Admin</option>
-                              <option>User</option>
+                              <option>Select </option>
+                              <option>lorem ipsum</option>
+                              <option>lorem ipsum</option>
+                              <option>lorem ipsum</option>
+                              <option>lorem ipsum</option>
                             </select>
 
                         </div>
-                        <div class="col-12">
-                            <label>Category</label>
-                            <select>
-                              <option>Select from drop down</option>
-                              <option>Admin</option>
-                              <option>User</option>
-                            </select>
 
-                        </div>
+
                     </div>
 
                     <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 40px;">
+                        <div class="col-12" style="text-align: right; margin-top: 64px;">
                             <button class="cancelBtn">Cancel</button>
-                            <button class="addBtn">Transfer</button>
-
-                        </div>
-                    </div>
-
-
-
-
-                </form>
-            </div>
-        </div>
-
-
-        <!-- Resolve Chat Popup Model -->
-        <div class="resolve-chat-model" id="myResolveModel">
-
-            <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
-                <form action="#" class="form-container">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 resolve-chat-popup-heading">
-                            <h6>Resolve Chat</h6>
-
-
-                        </div>
-                    </div>
-                    <div class="row">
-
-                        <p>Are you sure you want to resolve this chat?</p>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-12" style="text-align: right; margin-top: 45px;">
-                            <button class="addBtn">Yes</button>
-                            <button class="cancelBtn">No</button>
+                            <button class="submitBtn">Submit</button>
 
 
                         </div>
@@ -153,16 +115,18 @@
 
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked onclick="agentRedirectAdminFunction()">
                     <label class="custom-control-label" for="customSwitch1" style="margin-left: 44px;"></label>
-                    <span class="space-right">Agent</span>
+                    <span class="space-right" id="agentText">Agent</span>
+                    <span class="space-right" id="adminText" style="display: none;">Admin</span>
                 </div>
             </li>
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch2">
+                    <input type="checkbox" class="custom-control-input" id="customSwitch2" onclick="agentOfflineFunction()" checked>
                     <label class="custom-control-label" for="customSwitch2" style="margin-left: 44px;"></label>
-                    <span class="space-right">Online</span>
+                    <span class="space-right" id="agentOnlineText">Online</span>
+                    <span class="space-right" id="agentOfflineText" style="display: none;">Offline</span>
                 </div>
             </li>
 
