--- a/manage-users.html
+++ b/manage-users.html
@@ -229,18 +229,18 @@
 
             <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
-                    <input type="checkbox" class="custom-control-input" id="customSwitch1" checked>
+                    <input type="checkbox" class="custom-control-input" id="customSwitch1">
                     <label class="custom-control-label" for="customSwitch1" style="margin-left: 44px;"></label>
-                    <span class="space-right">Agent</span>
+                    <span class="space-right">Admin</span>
                 </div>
             </li>
-            <li id="navitemtoggle" class="nav-item">
+            <!-- <li id="navitemtoggle" class="nav-item">
                 <div class="custom-control custom-switch nav-link">
                     <input type="checkbox" class="custom-control-input" id="customSwitch2">
                     <label class="custom-control-label" for="customSwitch2" style="margin-left: 44px;"></label>
                     <span class="space-right">Online</span>
                 </div>
-            </li>
+            </li> -->
 
             <br>
             <!-- Sidebar Toggler (Sidebar) -->
@@ -369,7 +369,7 @@
 
                                             <td role="cell">
                                                 <label class="switch">
-                                                    <input type="checkbox" >
+                                                    <input type="checkbox" checked>
                                                     <span class="slider round"></span>
                                                   </label>
                                             </td>
@@ -417,7 +417,7 @@
 
                                             <td role="cell">
                                                 <label class="switch">
-                                                    <input type="checkbox" >
+                                                    <input type="checkbox" checked>
                                                     <span class="slider round"></span>
                                                   </label>
                                             </td>
